--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <script src="https://kit.fontawesome.com/f0a141e5be.js" crossorigin="anonymous"></script>
     <title>TCC - 3RM</title>
 </head>
-<body>
+<body class="light-mode"> 
 
     <nav>
         <img src="assets/SENAI_São_Paulo_logo.png" alt="LOGO SENAI">
 
-        <button type="button"><i class="fa-regular fa-moon"></i></button>
+        <button type="button" onclick="toggleDarkMode()"><i id="darkModeIcon" class="fa-regular fa-moon"></i></button>
     </nav>
 
     <main>
@@ -31,5 +31,7 @@
         </form>
     </footer>
 
+
+    <script src="js/script.js"></script>
 </body>
 </html>
