--- a/groups.html
+++ b/groups.html
@@ -31,7 +31,7 @@
         <section class="arduino-group">
 
             <div class="ise">
-                <a href="#"><img src="assets/isi.png" alt="Instituto SENAI de inovação"></a>
+                <a href="pessoas_arduino.html"><img src="assets/isi.png" alt="Instituto SENAI de inovação"></a>
             </div>
             
             <div class="txt">
@@ -43,7 +43,7 @@
         <section class="chamado-group">
 
             <div class="ise">
-                <a href="#"><img src="assets/isi.png" alt="Instituto SENAI de inovação"></a>
+                <a href="pessoas_chamado.html"><img src="assets/isi.png" alt="Instituto SENAI de inovação"></a>
             </div>
             
             <div class="txt">
