--- a/pessoas_isi.html
+++ b/pessoas_isi.html
@@ -21,17 +21,17 @@
         
         <section class="line">
 
-            <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição;LinkedIn: https://www.linkedin.com/in/everton-silva-ns011/">
+            <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/everton-silva-ns011/">
                 <img src="assets/pessoa.png">
                 <h1>Everton Almeida</h1>
             </div>
 
-            <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição">
+            <div class="square" data-content="Fabricio Castro; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/fabricio-castro-762402265/">
                 <img src="assets/pessoa.png">
                 <h1>Fabricio Castro</h1>
             </div>
 
-            <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição">
+            <div class="square" data-content="Gabriel Lima; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/gabriel-lima777/">
                 <img src="assets/pessoa.png">
                 <h1>Gabriel Lima</h1>
             </div>
@@ -40,17 +40,17 @@
 
         <section class="line">
 
-            <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição">
+            <div class="square" data-content="Gustavo da Silva; descrição, descrição, descrição descriçãodsda descrição">
                 <img src="assets/pessoa.png">
                 <h1>Gustavo da Silva</h1>
             </div>
 
-            <div class="square" data-content="Hugo Santos; descrição, descrição, descrição descriçãodsda descrição">
+            <div class="square" data-content="Hugo Santos; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/hugo-redesdecomputadores/">
                 <img src="assets/Hugo.png">
                 <h1>Hugo Santos</h1>
             </div>
 
-            <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição">
+            <div class="square" data-content="Kaique de Moura; descrição, descrição, descrição descriçãodsda descrição">
                 <img src="assets/pessoa.png">
                 <h1>Kaique de Moura</h1>
             </div>
@@ -59,17 +59,17 @@
 
         <section class="line">
 
-            <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição">
+            <div class="square" data-content="Kelvin Cavalcante; descrição, descrição, descrição descriçãodsda descrição">
                 <img src="assets/pessoa.png">
                 <h1>Kelvin Cavalcante</h1>
             </div>
 
-            <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição">
+            <div class="square" data-content="Khayan Joaquim; descrição, descrição, descrição descriçãodsda descrição">
                 <img src="assets/pessoa.png">
                 <h1>Khayan Joaquim</h1>
             </div>
 
-            <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição">
+            <div class="square" data-content="Luiz Gustavo; descrição, descrição, descrição descriçãodsda descrição">
                 <img src="assets/pessoa.png">
                 <h1>Luiz Gustavo</h1>
             </div>
@@ -78,17 +78,17 @@
 
         <section class="line">
 
-            <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição">
+            <div class="square" data-content="Matheus Anselmo; descrição, descrição, descrição descriçãodsda descrição">
                 <img src="assets/pessoa.png">
                 <h1>Matheus Anselmo</h1>
             </div>
 
-            <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição">
+            <div class="square" data-content="Matheus Gomes; descrição, descrição, descrição descriçãodsda descrição">
                 <img src="assets/pessoa.png">
                 <h1>Matheus Gomes</h1>
             </div>
 
-            <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição">
+            <div class="square" data-content="Natã Custódio; descrição, descrição, descrição descriçãodsda descrição">
                 <img src="assets/pessoa.png">
                 <h1>Natã Custódio</h1>
             </div>
@@ -97,7 +97,7 @@
 
         <section class="line">
 
-            <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição">
+            <div class="square" data-content="Saymon Santarem; descrição, descrição, descrição descriçãodsda descrição">
                 <img src="assets/pessoa.png">
                 <h1>Saymon Santarem</h1>
             </div>
@@ -108,10 +108,11 @@
     <script src="js/script.js"></script>
     <div id="popup" class="popup">
         <div class="popup-content" id="popup-content">
-            <span class="close" onclick="closePopup()">&times;</span>
+            <span id="closeButton" class="close" onclick="closePopup()">&times;</span>
             <h2><span id="popup-name"></span></h2>
-            <p><strong>Informações Adicionais:</strong><br><span id="popup-info"></span></p>
-            <a id="linkedin-link" class="popup-link" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <p><br><span id="popup-info"></span></p>
+            <br>
+            <a id="linkedin-link" class="popup-link linkedin-icon" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         </div>
     </div>
 </body>
