add more photos

--- a/pessoas_arduino.html
+++ b/pessoas_arduino.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="square" data-content="Fabricio Castro; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/everton-silva-ns011/">
-                <img src="assets/pessoa.png">
+                <img src="assets/Fabio.jpg">
                 <h1>Fabio Araujo</h1>
             </div>
 
@@ -38,17 +38,17 @@
         <section class="line">
 
             <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/everton-silva-ns011/">
-                <img src="assets/pessoa.png">
+                <img src="assets/Pedro.jpg">
                 <h1>Pedro Borges</h1>
             </div>
 
             <div class="square" data-content="Fabricio Castro; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/everton-silva-ns011/">
-                <img src="assets/pessoa.png">
-                <h1>Thiago Scher</h1>
+                <img src="assets/Tiago.jpg">
+                <h1>Tiago Scher</h1>
             </div>
 
             <div class="square" data-content="Gabriel Lima; descrição, descrição, descrição descriçãodsda descrição">
-                <img src="assets/pessoa.png">
+                <img src="assets/Vitoria.jpg">
                 <h1>Vitoria Cazita</h1>
             </div>
         
@@ -56,7 +56,7 @@
         <section class="line">
 
             <div class="square" data-content="Gabriel Lima; descrição, descrição, descrição descriçãodsda descrição">
-                <img src="assets/pessoa.png">
+                <img src="assets/Vinicius.jpg">
                 <h1>Vinicius Romagnolo</h1>
             </div>
         
