--- a/pessoas_isi.html
+++ b/pessoas_isi.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="square" data-content="Gabriel Lima; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/gabriel-lima777/">
-                <img src="assets/pessoa.png">
+                <img src="assets/Gabriel.jpg">
                 <h1>Gabriel Lima</h1>
             </div>
         
@@ -51,7 +51,7 @@
             </div>
 
             <div class="square" data-content="Kaique de Moura; descrição, descrição, descrição descriçãodsda descrição">
-                <img src="assets/pessoa.png">
+                <img src="assets/kaique.jpg">
                 <h1>Kaique de Moura</h1>
             </div>
         
@@ -84,7 +84,7 @@
             </div>
 
             <div class="square" data-content="Matheus Gomes; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/matheus-gomes-a95951242/">
-                <img src="assets/pessoa.png">
+                <img src="assets/MatheusG.jpg">
                 <h1>Matheus Gomes</h1>
             </div>
 
