add linkedin url

--- a/pessoas_arduino.html
+++ b/pessoas_arduino.html
@@ -18,17 +18,17 @@
         <p>akfamdakfmak afmakfm afkmaf mafça afkafk aofkaofkaofka ofoa kfoak foakf okfoa</p>
         <section class="line">
 
-            <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/everton-silva-ns011/">
+            <div class="square" data-content="Ana Clara; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/anareznd/">
                 <img src="assets/Ana.jpg">
                 <h1>Ana Clara</h1>
             </div>
 
-            <div class="square" data-content="Fabricio Castro; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/everton-silva-ns011/">
+            <div class="square" data-content="Fabio Araujo; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/fabio-araujo-silva-084758190/">
                 <img src="assets/Fabio.jpg">
                 <h1>Fabio Araujo</h1>
             </div>
 
-            <div class="square" data-content="Gabriel Lima; descrição, descrição, descrição descriçãodsda descrição">
+            <div class="square" data-content="Kaio Vinicius; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/kaiovvn/">
                 <img src="assets/Kaio.jpg">
                 <h1>Kaio Vinicius</h1>
             </div>
@@ -37,17 +37,17 @@
 
         <section class="line">
 
-            <div class="square" data-content="Everton Almeida; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/everton-silva-ns011/">
+            <div class="square" data-content="Pedro Borges; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/pedrob0rga509e/">
                 <img src="assets/Pedro.jpg">
                 <h1>Pedro Borges</h1>
             </div>
 
-            <div class="square" data-content="Fabricio Castro; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/everton-silva-ns011/">
+            <div class="square" data-content="Tiago Scher; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/tiago-scher/">
                 <img src="assets/Tiago.jpg">
                 <h1>Tiago Scher</h1>
             </div>
 
-            <div class="square" data-content="Gabriel Lima; descrição, descrição, descrição descriçãodsda descrição">
+            <div class="square" data-content="Vitoria Cazita; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/vitoriacazita/">
                 <img src="assets/Vitoria.jpg">
                 <h1>Vitoria Cazita</h1>
             </div>
@@ -55,7 +55,7 @@
         </section>
         <section class="line">
 
-            <div class="square" data-content="Gabriel Lima; descrição, descrição, descrição descriçãodsda descrição">
+            <div class="square" data-content="Vinicius Romagnolo; descrição, descrição, descrição descriçãodsda descrição" data-linkedin="https://www.linkedin.com/in/vinicius-romagnolo-0222a0265/">
                 <img src="assets/Vinicius.jpg">
                 <h1>Vinicius Romagnolo</h1>
             </div>
